[tool.poetry]
name = "gradio-examples"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.26.0"
uvicorn = "^0.29.0"
numpy = "^1.26.4"
ipython = "^8.23.0"
plotly = "^5.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
